lanecwe-Prod/src/objects/Voter_Action__c.object
<CustomObject>
    <fields>
        <fullName>Action_Status__c</fullName>
        <label>Action Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>When should the action be completed by?</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Action__c</fullName>
        <inlineHelpText>Action to take based on solution</inlineHelpText>
        <label>Next Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Need__c</fullName>
        <inlineHelpText>Problem or need from their perspective</inlineHelpText>
        <label>Problem/Need</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Soution_Message__c</fullName>
        <inlineHelpText>How does PGi solve their problem or need or message to it?</inlineHelpText>
        <label>Soution/Message</label>
        <type>TextArea</type>
    </fields>
    <label>Voter Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Action_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AID-{000000}</displayFormat>
        <label>Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voter Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>